--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,8 @@
     <h2>Septic Calculator</h2>
     <a href="/">Home</a>
     <a href="/calculate">Calculator</a>
-    <a href="#">Results</a>
+    <a href="/knowledge">Knowledge Guide</a> <!-- Add the new link here -->
+    <a href="#">Results</a> <!-- Prevent direct navigation -->
 </div>
 
 <!-- Main Container -->
