--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
     <h2>Septic Calculator</h2>
     <a href="/">Home</a>
     <a href="/calculate">Calculator</a>
+    <a href="/knowledge">Knowledge Guide</a> <!-- Add the new link here -->
     <a href="/results">Results</a>
 </div>
 
