--- a/app/templates/calculate.html
+++ b/app/templates/calculate.html
@@ -15,6 +15,7 @@
     <h2>Septic Calculator</h2>
     <a href="/">Home</a>
     <a href="/calculate">Calculator</a>
+    <a href="/knowledge">Knowledge Guide</a> <!-- Add the new link here -->
     <a href="#">Results</a>
 </div>
 
